--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
     <properties>
         <java.version>17</java.version>
         <kotlin.version>1.9.24</kotlin.version>
+        <sonar.host.url>http://localhost:9000</sonar.host.url>
+        <sonar.login>sqp_723129a7c31fd44312ce4f15dc2ff9efbcbfec25</sonar.login>
     </properties>
     <dependencies>
         <dependency>
@@ -97,6 +99,11 @@
                         </exclude>
                     </excludes>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.1.2184</version>
             </plugin>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
